# google_search_service

./: .gitattributes  README.md  alembic.ini  main.py  pyproject.toml
database_management/: env.py  tables.py
database_management/versions/: 6e218a67777e_create_google_searches_table.py
local_config/: config.toml
models/: google_search_response.py
services/: google_search_dao.py  google_search_service.py  pg_engine.py
unit_tests/services/: test_pg_engine.py
